plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.10'
}

apply plugin: 'java'
sourceCompatibility = 17

group 'groupId'
version '1.0-SNAPSHOT'

javafx {
    version = "17"
    modules = ['javafx.controls', 'javafx.fxml']
}

repositories {
    mavenCentral()
    jcenter()
}

dependencies {
    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.3'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'
    testImplementation 'org.mockito:mockito-core:3.7.7'
    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.7.7'
    implementation files('/usr/local/share/java/opencv4/opencv-454.jar');
}

mainClassName = 'Main'

test {
    useJUnitPlatform()
}

run {
    jvmArgs = [
            '--enable-preview'
    ]
    systemProperties['java.library.path'] = '/usr/local/share/java/opencv4'
}
